@startuml ui_system

package "UI System (Strategy Pattern)" {
    interface OverlayUI {
        + HandleInput()
        + Update(dt: float)
        + Draw()
        + IsFinished(): bool
    }

    class CharacterSelectionOverlay {
        - player1Ref: Player*
        - player2Ref: Player*
        - p1Index: int
        - p2Index: int
        + HandleInput()
        + Update(dt: float)
        + Draw()
        + IsFinished(): bool
    }

    class SettingsOverlay {
        - gameManager: GameManager*
        + HandleInput()
        + Update(dt: float)
        + Draw()
        + IsFinished(): bool
    }

    OverlayUI <|.. CharacterSelectionOverlay
    OverlayUI <|.. SettingsOverlay

    class World1_1State {
        - activeOverlay: OverlayUI*
        + HandleInput()
        + Update(dt: float)
        + Draw()
    }

    World1_1State o--> OverlayUI : "manages >"

    note right of World1_1State
        When activeOverlay is not null, 
        gameplay physics are paused 
        and input/draw are delegated.
    end note
}

@enduml
